# resume-checker

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.backend  README.md  docker-compose.yml  pyproject.toml
app/: celery_app.py  config.py  job_store.py  main.py  mcp_client.py  pipeline.py  schemas.py
app/llm/: client.py  prompts.py
app/routes/: analyze.py  health.py  jobs.py
app/tasks/: __init__.py  analyze_cv_content.py  assemble_output.py  compute_score.py  estimate_salary.py  extract_cv_structure.py  generate_explanation.py  ingest_cv.py  score_ats.py
architecture/: api-interfaces.md  architecture.md  technology-stack.md
config/: salary_bands.yaml  scoring_weights.yaml
deploy/: Dockerfile.frontend  docker-compose.prod.yml  nginx-frontend.conf
frontend/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: main.tsx
function_requirements/: requirements.md
platy_mcp/: scraper.py  server.py  tools.py
tasks/: plan.json  task-1-project-scaffolding.json  task-10-frontend-types-update.json  task-11-frontend-score-breakdown-ui.json  task-12-qa-rich-breakdown.json  task-13-backend-cv-content-analysis.json  task-14-frontend-content-analysis-ui.json  task-15-backend-ats-scoring.json  task-16-frontend-ats-analysis-ui.json  task-2-backend-api-and-job-store.json  task-3-celery-pipeline-tasks.json  task-4-platy-mcp-server.json  task-5-frontend-ui.json  task-6-backend-tests.json  task-7-arch-rich-score-breakdown-schema.json  task-8-backend-rich-score-breakdown.json  task-9-backend-llm-prompt-update.json
tests/: conftest.py
(+23 files in other folders)
