[project]
name = "cv-analyzer"
version = "1.0.0"
description = "Job Fit & Salary Estimator — CV analysis pipeline"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111,<1.0",
    "uvicorn[standard]>=0.29,<1.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "celery[redis]>=5.4,<6.0",
    "redis>=5.0,<6.0",
    "httpx>=0.27,<1.0",
    "pdfplumber>=0.10,<1.0",
    "python-docx>=1.1,<2.0",
    "python-magic>=0.4,<1.0",
    "pyyaml>=6.0,<7.0",
    "python-dotenv>=1.0,<2.0",
    "structlog>=24.0,<25.0",
    "aiofiles>=23.0,<25.0",
    "mcp>=1.0,<2.0",
    "python-multipart>=0.0.9,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-httpx>=0.30,<1.0",
    "ruff>=0.4,<1.0",
    "mypy>=1.10,<2.0",
    "celery[pytest]>=5.4,<6.0",
    "flower>=2.0,<3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "platy_mcp"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Prompt strings in LLM template files are intentionally long — E501 is not meaningful here.
"app/llm/prompts.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
